--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -1,3 +1,43 @@
+@inproceedings{gallatin1999trapeze,
+  title     = {Trapeze/IP: TCP/IP at Near-Gigabit Speeds},
+  author    = {Andrew J. Gallatin and Jeffrey S. Chase and Kenneth G. Yocum},
+  booktitle = {Proceedings of the USENIX Annual Technical Conference},
+  pages     = {109--120},
+  year      = {1999},
+  url       = {https://www.usenix.org/event/usenix99/full_papers/gallatin/gallatin.pdf}
+}
+
+@article{cox2000profiling,
+  author    = {Alan L. Cox and Lambert Schaelicke and Al Davis and Sally A. McKee},
+  title     = {Profiling I/O Interrupts in Modern Architectures},
+  journal   = {Proceedings of the Workshop on Performance Analysis and Its Impact on Design},
+  year      = {2000},
+  url       = {https://users.cs.utah.edu/~ald/pubs/interrupts.pdf}
+}
+
+@misc{fdio_what_is_vpp,
+  author       = {FD.io},
+  title        = {What is VPP?},
+  year         = {2025},
+  howpublished = {\url{https://wiki.fd.io/view/VPP/What\_is\_VPP\%3F}},
+  note         = {Accessed: 2025-04-07}
+}
+
+@article{LINGUAGLOSSA,
+title = {High-speed data plane and network functions virtualization by vectorizing packet processing},
+journal = {Computer Networks},
+volume = {149},
+pages = {187-199},
+year = {2019},
+issn = {1389-1286},
+doi = {https://doi.org/10.1016/j.comnet.2018.11.033},
+url = {https://www.sciencedirect.com/science/article/pii/S1389128618312957},
+author = {Leonardo Linguaglossa and Dario Rossi and Salvatore Pontarelli and Dave Barach and Damjan Marjon and Pierre Pfister},
+keywords = {Software routers, High-speed networking, Vector packet processing, Kernel-bypass}
+}
+
+
+
 @article{Sestakova2018,
   author        = {Eliška Šestáková and Jan Janoušek},
   journal       = {Information},
