Expand the Theoretical part

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -36,6 +36,30 @@ author = {Leonardo Linguaglossa and Dario Rossi and Salvatore Pontarelli and Dav
 keywords = {Software routers, High-speed networking, Vector packet processing, Kernel-bypass}
 }
 
+@article{DR:COMMAG-18,
+  author = {Barach, David and Linguaglossa, Leonardo and Marion, Damjan and Pfister, Pierre and Pontarelli, Salvatore and Rossi, Dario},
+  journal = {IEEE Communication Magazine},
+  title = {High-speed Software Data Plane via Vectorized Packet Processing},
+  year = {2018},
+  volume = {56},
+  number = {12},
+  pages = {97-103},
+  keywords = {Vector Packet Processing; High-speed networking;  System design},
+  howpublished = {https://perso.telecom-paristech.fr/drossi/paper/rossi18commag.pdf},
+  doi = {10.1109/MCOM.2018.1800069},
+  issn = {0163-6804},
+  month = dec
+}
+
+
+@misc{fdio_vpp_extensible_2021,
+  author       = {{FD.io}},
+  title        = {Extensible: VPP and its plugin architecture},
+  year         = {2021},
+  howpublished = {\url{https://fd.io/docs/vpp/v2101/whatisvpp/extensible}},
+  note         = {Accessed: 2025-04-10}
+}
+
 
 
 @article{Sestakova2018,
