--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -60,6 +60,26 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {Accessed: 2025-04-10}
 }
 
+@misc{dpdk_about,
+  author       = {{DPDK Project}},
+  title        = {{About DPDK}},
+  howpublished = {\url{https://www.dpdk.org/about/}},
+  year         = {2025},
+  note         = {Accessed: 2025-04-13}
+}
+
+@article{FREITAS2022148,
+  title = {A survey on accelerating technologies for fast network packet processing in Linux environments},
+  journal = {Computer Communications},
+  volume = {196},
+  pages = {148-166},
+  year = {2022},
+  issn = {0140-3664},
+  doi = {https://doi.org/10.1016/j.comcom.2022.10.003},
+  url = {https://www.sciencedirect.com/science/article/pii/S0140366422003917},
+  author = {Eduardo Freitas and Assis T. {de Oliveira Filho} and Pedro R.X. {do Carmo} and Djamel Sadok and Judith Kelner},
+  keywords = {Fast packet processing, Linux kernel, Kernel bypass, Offloading, Programmable network}
+}
 
 
 @article{Sestakova2018,
