Start work on practical part

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -81,4 +81,12 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   keywords = {Fast packet processing, Linux kernel, Kernel bypass, Offloading, Programmable network}
 }
 
-
+@misc{RFC8219,
+  author       = {David Allan and Jordi Palet Martinez},
+  title        = {Benchmarking Methodology for IPv6 Transition Technologies},
+  howpublished = {\url{https://datatracker.ietf.org/doc/html/rfc8219}},
+  year         = {2017},
+  month        = {July},
+  note         = {RFC 8219},
+  institution  = {Internet Engineering Task Force},
+}
