--- a/text/text.tex
+++ b/text/text.tex
@@ -54,13 +54,13 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 \section{Building Infrastructure for Measurement}
 %---------------------------------------------------------------
+\input{text/chapters/infrastructure.tex}
 
 %---------------------------------------------------------------
 \section{Test Scenarios \& Results}
 %---------------------------------------------------------------
-
+\input{text/chapters/measurement.tex}
 %---------------------------------------------------------------
-\subsection{Scenario \#1a}
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
