--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -90,3 +90,88 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {RFC 8219},
   institution  = {Internet Engineering Task Force},
 }
+
+
+@article{JURKIEWICZ202115,
+  title = {Flow length and size distributions in campus Internet traffic},
+  journal = {Computer Communications},
+  volume = {167},
+  pages = {15-30},
+  year = {2021},
+  issn = {0140-3664},
+  doi = {https://doi.org/10.1016/j.comcom.2020.12.016},
+  url = {https://www.sciencedirect.com/science/article/pii/S0140366420320223},
+  author = {Piotr Jurkiewicz and Grzegorz Rzym and Piotr Boryło},
+  keywords = {Flow distributions, Network traffic model, Elephant flows, Mice flows, SDN},
+}
+
+@INPROCEEDINGS{10819057,
+  author={Slavic, Goran and Krajnovic, Nenad},
+  booktitle={2024 32nd Telecommunications Forum (TELFOR)}, 
+  title={Practical implementation of the vector packet processing software router}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1-4},
+  keywords={Linux;Switches;Routing;Birds;Software;Hardware;Vectors;Telecommunications;Open source software;software router;VPP;DPDK;BIRD;Networking;routing software},
+  doi={10.1109/TELFOR63250.2024.10819057}
+}
+
+@misc{fdio-vpp-features-2502,
+  author       = {{FD.io Project}},
+  title        = {VPP Feature List – FD.io Documentation (Release 25.02)},
+  year         = {2025},
+  url          = {https://s3-docs.fd.io/vpp/25.02/aboutvpp/featurelist.html},
+  note         = {Accessed: 2025-04-15}
+}
+
+@article{traffic-generators,
+  author = {Adeleke, Oluwamayowa Ade and Bastin, Nicholas and Gurkan, Deniz},
+  title = {Network Traffic Generation: A Survey and Methodology},
+  year = {2022},
+  issue_date = {February 2023},
+  publisher = {Association for Computing Machinery},
+  address = {New York, NY, USA},
+  volume = {55},
+  number = {2},
+  issn = {0360-0300},
+  url = {https://doi.org/10.1145/3488375},
+  doi = {10.1145/3488375},
+  journal = {ACM Comput. Surv.},
+  month = jan,
+  articleno = {28},
+  numpages = {23},
+  keywords = {Network, packet, traffic, workload, generator, experiment, survey, analysis}
+}
+
+@misc{iperf,
+  author = {The iPerf Team},
+  title = {iPerf - The Network Testing Tool},
+  year = {2025},
+  url = {https://iperf.fr/},
+  note = {Accessed: 2025-04-16}
+}  
+
+@misc{trex,
+  author = {Cisco Systems, Inc.},
+  title = {TRex - Traffic Generator},
+  year = {2025},
+  url = {https://trex-tgn.cisco.com/},
+  note = {Accessed: 2025-04-16}
+}
+
+@misc{pktgen_dpdk,
+  author       = {DPDK Project},
+  title        = {Pktgen-DPDK},
+  howpublished = {\url{https://pktgen-dpdk.readthedocs.io/}},
+  year         = {2025},
+  note         = {Accessed: 2025-04-16}
+}
+
+
+
+
+
+
+
+
