--- a/text/text.tex
+++ b/text/text.tex
@@ -41,11 +41,21 @@ The Practical part describes the testing infrastructure, presents the results of
 \section{"Vector Packet Processing (VPP) and Its Operating Principles}
 %---------------------------------------------------------------
 \input{text/chapters/principles.tex}
+
 %---------------------------------------------------------------
 \section{Implementation of Vector Packet Processing}
 %---------------------------------------------------------------
 \input{text/chapters/implementation}
 
+%---------------------------------------------------------------
+\section{Effective Utilization of Vector Packet Processing}
+%---------------------------------------------------------------
+\input{text/chapters/usage.tex}
+
+%---------------------------------------------------------------
+\section{Survey of Traffic Generation Tools}
+%---------------------------------------------------------------
+\input{text/chapters/pktgen.tex}
 
 %---------------------------------------------------------------
 \chapter{Pratical part}
@@ -57,15 +67,21 @@ The Practical part describes the testing infrastructure, presents the results of
 \input{text/chapters/infrastructure.tex}
 
 %---------------------------------------------------------------
+\section{Metodology}
+%---------------------------------------------------------------
+
+
+%---------------------------------------------------------------
 \section{Test Scenarios \& Results}
 %---------------------------------------------------------------
 \input{text/chapters/measurement.tex}
-%---------------------------------------------------------------
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
 \section{Presentation and Analysis of Results}
 %---------------------------------------------------------------
 
+
+\chapter{Conclusion}
 
 
