--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -168,8 +168,23 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {Accessed: 2025-04-16}
 }
 
+@manual{DITGManual,
+  title        = {D-ITG: Distributed Internet Traffic Generator Manual},
+  author       = {Computer Networking Group, Università degli Studi di Napoli Federico II},
+  year         = {2013},
+  note         = {Accessed: 2025-04-16},
+  url          = {https://traffic.comics.unina.it/software/ITG/manual/}
+}
 
-
+@techreport{fdio2017whitepaper,
+  title        = {FD.io VPP: High Performance, Modular, and Production Quality Software Forwarder},
+  author       = {{FD.io Project}},
+  year         = {2017},
+  month        = {July},
+  institution  = {FD.io},
+  url          = {https://fd.io/docs/whitepapers/FDioVPPwhitepaperJuly2017.pdf},
+  note         = {Accessed: 2025-04-16}
+}
 
 
 
