--- a/text/text.tex
+++ b/text/text.tex
@@ -48,7 +48,7 @@ The Practical part describes the testing infrastructure, presents the results of
 \input{text/chapters/implementation}
 
 %---------------------------------------------------------------
-\section{Effective Utilization of Vector Packet Processing}
+\section{Utilization of Vector Packet Processing}
 %---------------------------------------------------------------
 \input{text/chapters/usage.tex}
 
