--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -81,6 +81,21 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   keywords = {Fast packet processing, Linux kernel, Kernel bypass, Offloading, Programmable network}
 }
 
+@misc{rfc2544,
+    series =    {Request for Comments},
+    number =    2544,
+    howpublished =  {RFC 2544},
+    publisher = {RFC Editor},
+    doi =       {10.17487/RFC2544},
+    url =       {https://www.rfc-editor.org/info/rfc2544},
+    author =    {},
+    title =     {{Benchmarking Methodology for Network Interconnect Devices}},
+    pagetotal = 31,
+    year =      1999,
+    month =     mar,
+    abstract =  {This document is a republication of RFC 1944 correcting the values for the IP addresses which were assigned to be used as the default addresses for networking test equipment. This memo provides information for the Internet community.},
+}
+
 @misc{RFC8219,
   author       = {David Allan and Jordi Palet Martinez},
   title        = {Benchmarking Methodology for IPv6 Transition Technologies},
