--- a/text/text.tex
+++ b/text/text.tex
@@ -69,7 +69,7 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 \section{Metodology}
 %---------------------------------------------------------------
-
+\input{text/chapters/metodology.tex}
 
 %---------------------------------------------------------------
 \section{Test Scenarios \& Results}
