Finnish DPDK section

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -68,6 +68,58 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {Accessed: 2025-04-13}
 }
 
+@misc{dpdk-supported-nics,
+  author       = {{DPDK Project}},
+  title        = {Supported NICs},
+  howpublished = {\url{https://core.dpdk.org/supported/nics/}},
+  year         = {2024},
+  note         = {Accessed: 2025-04-20}
+}
+
+@article{burakov2019memory,
+  author  = {Anatoly Burakov},
+  title   = {Memory in DPDK, Part 1: General Concepts},
+  journal = {DPDK Blog},
+  year    = {2019},
+  url     = {https://www.dpdk.org/memory-in-dpdk-part-1-general-concepts/},
+  note    = {Accessed: 2025-04-20}
+}
+
+@misc{linux-packet-input,
+      title={Understanding and Enhancing Linux Kernel-based Packet Switching on WiFi Access Points}, 
+      author={Shiqi Zhang and Mridul Gupta and Behnam Dezfouli},
+      year={2024},
+      eprint={2408.01013},
+      archivePrefix={arXiv},
+      primaryClass={cs.NI},
+      url={https://arxiv.org/abs/2408.01013}, 
+}
+
+@misc{linux-rss,
+  author       = {Linux Kernel Documentation},
+  title        = {Scaling in the Linux Networking Stack},
+  year         = {2023},
+  howpublished = {\url{https://docs.kernel.org/networking/scaling.html}},
+  note         = {Accessed: 2025-04-19}
+}
+
+@misc{intel-core-utilization-2025,
+  author       = {{Intel Corporation}},
+  title        = {Core Utilization in DPDK Applications},
+  year         = {2024},
+  howpublished = {\url{https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/core-utilization-in-dpdk-apps.html}},
+  note         = {Accessed: 2025-04-19}
+}
+
+@misc{intel-pcie-traffic-2025,
+  author       = {{Intel Corporation}},
+  title        = {PCIe Traffic in DPDK Applications},
+  year         = {2024},
+  howpublished = {\url{https://www.intel.com/content/www/us/en/docs/vtune-profiler/cookbook/2025-0/pcie-traffic-in-dpdk-apps.html}},
+  note         = {Accessed: 2025-04-19}
+}
+
+
 @article{FREITAS2022148,
   title = {A survey on accelerating technologies for fast network packet processing in Linux environments},
   journal = {Computer Communications},
