Work on implemantation

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -85,6 +85,15 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note    = {Accessed: 2025-04-20}
 }
 
+@article{burakov2019memory,
+  author  = {Anatoly Burakov},
+  title   = {Memory in DPDK, Part 1: General Concepts},
+  journal = {DPDK Blog},
+  year    = {2019},
+  url     = {https://www.dpdk.org/memory-in-dpdk-part-1-general-concepts/},
+  note    = {Accessed: 2025-04-20}
+}}
+
 @misc{linux-packet-input,
       title={Understanding and Enhancing Linux Kernel-based Packet Switching on WiFi Access Points}, 
       author={Shiqi Zhang and Mridul Gupta and Behnam Dezfouli},
@@ -119,6 +128,61 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {Accessed: 2025-04-19}
 }
 
+@online{fdio-vpp-softwarearchitecture-2506,
+  author    = {{FD.io Project}},
+  title     = {VPP Software Architecture},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/softwarearchitecture.html},
+  note      = {Accessed: 2025-04-21}
+}
+
+@online{fdio-vpp-infrastructure-2506,
+  author    = {{FD.io Project}},
+  title     = {VPP Infrastructure Layer},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/infrastructure.html},
+  note      = {Accessed: 2025-04-21}
+}
+
+@online{fdio-vpp-vnet-2506,
+  author       = {{FD.io Project}},
+  title        = {VNET - VPP Network Stack},
+  year         = {2025},
+  url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/vnet.html},
+  note         = {Accessed: 2025-04-21}
+}
+
+@online{fdio-vpp-featurearcs-2506,
+  author       = {{FD.io Project}},
+  title        = {Feature Arcs},
+  year         = {2025},
+  url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/featurearcs.html},
+  note         = {Accessed: 2025-04-21}
+}
+
+@online{fdio-vpp-vlib-2506,
+  title        = {VLIB Architecture — VPP Developer Documentation (Release 25.06)},
+  year         = {2025},
+  organization = {FD.io Project},
+  url          = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/vlib.html},
+  note         = {Accessed: 2025-04-21}
+}
+
+@online{fdio-vpp-plugins-2506,
+  author       = {{FD.io Project}},
+  title        = {Plugins},
+  year         = {2025},
+  url          = {https://s3-docs.fd.io/vpp/25.06/developer/plugins/index.html},
+  urldate      = {2025-04-21}
+}
+
+@online{fdio-vpp-addplugin-2506,
+  author       = {{FD.io Project}},
+  title        = {Add a New Plugin},
+  year         = {2025},
+  url          = {https://s3-docs.fd.io/vpp/25.06/developer/plugindoc/add_plugin.html},
+  urldate      = {2025-04-21}
+}
 
 @article{FREITAS2022148,
   title = {A survey on accelerating technologies for fast network packet processing in Linux environments},
