--- a/text/text.tex
+++ b/text/text.tex
@@ -30,7 +30,8 @@ This will result in an increased need for network equipment capable of processin
 Therefore, it is crucial to explore technologies like VPP that are capable to handle this growing demand and to explore their energy efficiency.
 
 This thesis is divided into two parts: Theoretical and Practical. 
-The Theoretical part presents the traditional approach to networking and packet processing, as well as an overview of how VPP is designed and the principles on which it operates. Additionally, it introduces the testing scenarios used. 
+The Theoretical part presents the traditional approach to networking and packet processing, as well as an overview of how VPP is designed and the principles on which it operates. 
+Additionally, it introduces the testing scenarios that were used. 
 The Practical part describes the testing infrastructure, presents the results of various measurements, and provides an analysis of the findings.
 
 %---------------------------------------------------------------
