Finnish udp test

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -317,6 +317,14 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note         = {Accessed: 2025-04-16}
 }
 
+@book{satrapa2023dns,
+  author    = {Pavel Satrapa and Ondřej Filip},
+  title     = {Domain Name System},
+  year      = {2023},
+  publisher = {CZ.NIC},
+  isbn      = {978-80-88168-71-3},
+  note      = {Brožovaná, 604 stran, 175 x 250 mm}
+}
 
 
 
