Continue work on startup and conf

--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -85,15 +85,6 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note    = {Accessed: 2025-04-20}
 }
 
-@article{burakov2019memory,
-  author  = {Anatoly Burakov},
-  title   = {Memory in DPDK, Part 1: General Concepts},
-  journal = {DPDK Blog},
-  year    = {2019},
-  url     = {https://www.dpdk.org/memory-in-dpdk-part-1-general-concepts/},
-  note    = {Accessed: 2025-04-20}
-}}
-
 @misc{linux-packet-input,
       title={Understanding and Enhancing Linux Kernel-based Packet Switching on WiFi Access Points}, 
       author={Shiqi Zhang and Mridul Gupta and Behnam Dezfouli},
@@ -183,6 +174,63 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   url          = {https://s3-docs.fd.io/vpp/25.06/developer/plugindoc/add_plugin.html},
   urldate      = {2025-04-21}
 }
+
+@online{fdio-supported-2025,
+  author    = {{FD.IO Project}},
+  title     = {Supported Architectures and Operating Systems},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/aboutvpp/supported.html},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{fdio-packagecloud,
+  author    = {{FD.IO Project}},
+  title     = {FD.io release package repository on Packagecloud.io},
+  year      = {2025},
+  url       = {https://packagecloud.io/fdio},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{fdio-building-guide,
+  author    = {{FD.IO Project}},
+  title     = {Building VPP},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/developer/build-run-debug/building.html},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{fdio-running,
+  author    = {{FD.IO Project}},
+  title     = {Running VPP},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/gettingstarted/running/index.html},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{dpdk-linux-drivers,
+  author    = {{DPDK Project}},
+  title     = {Linux Drivers},
+  year      = {2025},
+  url       = {https://doc.dpdk.org/guides/linux_gsg/linux_drivers.html},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{fdio-config-getting-started,
+  author    = {{FD.IO Project}},
+  title     = {Getting Started with the Configuration},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/configuration/config_getting_started.html},
+  note      = {Accessed: 2025-05-03}
+}
+
+@online{fdio-config-reference,
+  author    = {{FD.IO Project}},
+  title     = {Configuration Reference},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/configuration/reference.html},
+  note      = {Accessed: 2025-05-03}
+}
+
 
 @article{FREITAS2022148,
   title = {A survey on accelerating technologies for fast network packet processing in Linux environments},
