--- a/text/bib-database.bib
+++ b/text/bib-database.bib
@@ -231,6 +231,13 @@ keywords = {Software routers, High-speed networking, Vector packet processing, K
   note      = {Accessed: 2025-05-03}
 }
 
+@online{fdio-multithreading,
+  author    = {{FD.IO Project}},
+  title     = {Multi-threading in VPP},
+  year      = {2025},
+  url       = {https://s3-docs.fd.io/vpp/25.06/developer/corearchitecture/multi_thread.html},
+  note      = {Accessed: 2025-05-03}
+}
 
 @article{FREITAS2022148,
   title = {A survey on accelerating technologies for fast network packet processing in Linux environments},
