--- a/text/text.tex
+++ b/text/text.tex
@@ -39,7 +39,7 @@ The Practical part describes the testing infrastructure, presents the results of
 %---------------------------------------------------------------
 
 %---------------------------------------------------------------
-\section{"Vector Packet Processing (VPP) and Its Operating Principles}
+\section{Vector Packet Processing (VPP) and Its Operating Principles}
 %---------------------------------------------------------------
 \input{text/chapters/principles.tex}
 
