--- a/ctufit-thesis.tex
+++ b/ctufit-thesis.tex
@@ -221,16 +221,41 @@ unlimited in time, territory and quantity.
 \chapter{\thectufitabbreviationlabel}
 	
 \begin{tabular}{rl}
-DFA & Deterministic Finite Automaton\\
-FA & Finite Automaton\\
-LPS & Labelled Prüfer Sequence\\
-NFA & Nondeterministic Finite Automaton\\
-NPS & Numbered Prüfer Sequence\\
-XML & Extensible Markup Language\\
-XPath & XML Path Language\\
-XSLT & eXtensible Stylesheet Language Transformations\\
-W3C & World Wide Web Consortium
+API & Application Programming Interface\\
+BIRD & BIRD Internet Routing Daemon\\
+BPWh & Bytes Per Watt-Hour\\
+CLI & Command-Line Interface\\
+CNF & Cloud-Native Network Function\\
+DMA & Direct Memory Access\\
+DPDK & Data Plane Development Kit\\
+DUT & Device Under Test\\
+ECMP & Equal-Cost Multi-Path\\
+FD.io & Fast Data Project\\
+GRO & Generic Receive Offload\\
+GRE & Generic Routing Encapsulation\\
+GTP-U & GPRS Tunneling Protocol - User plane\\
+IRQ & Interrupt Request\\
+L2 & Layer 2 (Data Link Layer)\\
+L3 & Layer 3 (Network Layer)\\
+L4 & Layer 4 (Transport Layer)\\
+Linux & Linux kernel network stack\\
+MTU & Maximum Transmission Unit\\
+NAT & Network Address Translation\\
+NFV & Network Function Virtualization\\
+NIC & Network Interface Card\\
+NUMA & Non-Uniform Memory Access\\
+PMD & Poll Mode Driver\\
+PPWh & Packets Per Watt-Hour\\
+RPS & Receive Packet Steering\\
+RSS & Receive Side Scaling\\
+SDN & Software Defined Networking\\
+VLIB & Vector Library\\
+VNET & Vector Network Layer\\
+VNF & Virtual Network Function\\
+VPP & Vector Packet Processing\\
+VXLAN & Virtual Extensible LAN\\
 \end{tabular}
+
 %%%%%%%%%%%%%%%%%%%
 % ABBREVIATIONS END
 %%%%%%%%%%%%%%%%%%%
